--- a/online-web/src/main/webapp/web/css/index2.css
+++ b/online-web/src/main/webapp/web/css/index2.css
@@ -455,8 +455,14 @@ a {
 	float: right;
 	font-size: 14px;
 }
-
-
+.course_title a{
+	color: #00bc12;
+}
+.course_title a img{
+    width: 12px;
+    margin-left: 7px;
+    margin-top: -2px;
+}
 /*通用的title部分样式结束*/
 
 
