--- a/online-web/src/main/webapp/web/css/header.css
+++ b/online-web/src/main/webapp/web/css/header.css
@@ -604,7 +604,7 @@ body .loginGroup .logout a {
   cursor: pointer;
   text-decoration: none;
   display: inline-block;
-  height: 30px;
+  /*height: 30px;*/
   line-height: 63px;
 }
 html .loginGroup .logout .btn-link,
