轮播图按钮

--- a/online-web/src/main/webapp/web/css/school/school-live.css
+++ b/online-web/src/main/webapp/web/css/school/school-live.css
@@ -69,17 +69,15 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     display: block;
 }
 .carousel-indicators li{
-	border: 0 !important;
-	background: white;
 	width: 10px;
 	height: 10px;
 	margin: 0 5px;
-	
 }
 .carousel-indicators .active{
 	background: #00BC12;
 	width: 10px;
 	height: 10px;
+	border: 1px solid #00bc12;
 }
 /*轮播箭头*/
 /*精品,免费,最新,养生课程*/
