--- a/online-web/src/main/webapp/web/css/school/school-video.css
+++ b/online-web/src/main/webapp/web/css/school/school-video.css
@@ -69,8 +69,6 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     display: block;
 }
 .carousel-indicators li{
-	border: 0 !important;
-	background: white;
 		width: 10px;
 	height: 10px;
 	margin: 0 5px;
@@ -79,6 +77,7 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 	background: #00BC12;
 	width: 10px;
 	height: 10px;
+	border: 1px solid #00bc12;
 }
 /*轮播箭头*/
 /*听课*/
