--- a/online-web/src/main/webapp/web/css/index2.css
+++ b/online-web/src/main/webapp/web/css/index2.css
@@ -206,17 +206,18 @@ ul {
 
 .slider-container .selector span {
 	display: inline-block;
-	width: 10px;
-	height: 10px;
+	width: 12px;
+	height: 12px;
 	margin-right: 10px;
-	background-color: #fff;
 	border-radius: 50%;
+	border: 1px solid #ffffff;
 }
 
 .slider-container .selector span.cur {
-	height: 10px;
+	height: 12px;
 	background-color: #2cb82c;
 	border-radius: 50%;
+	border: 1px solid #00bc12;
 }
 
 .slider-container #left,
