--- a/wechat/src/main/webapp/xcview/css/live_audio.css
+++ b/wechat/src/main/webapp/xcview/css/live_audio.css
@@ -687,7 +687,7 @@ line-height: 0.42rem;
 }
 .wrapAll_comment{
 	width: 7.5rem;
-    position: absolute;
+    position: fixed;
 	display: none;
 	background:white;
 	box-sizing: border-box;
