--- a/wechat/src/main/webapp/xcview/css/live_class.css
+++ b/wechat/src/main/webapp/xcview/css/live_class.css
@@ -645,7 +645,7 @@ margin-top: 0.1rem;
 }
 .wrapAll_comment{
 	width: 7.5rem;
-    position: absolute;
+    position: fixed;
 
 	display: none;
 	background:white;
