--- a/wechat/src/main/webapp/xcview/css/details.css
+++ b/wechat/src/main/webapp/xcview/css/details.css
@@ -1,5 +1,17 @@
 @CHARSET "UTF-8";
 
+
+header{
+	width: 100%;
+    height: 0.88rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-size: 0.36rem;
+    text-align: center;
+    color: #333;
+    border-bottom: 1px solid #d8dde6;
+}
 .guanzhu1 {
 	display: none;
 }
@@ -125,9 +137,13 @@
 }
 
 .grabble_left {
-	width: 1.8rem;
-	height: 1.8rem;
-	float: left;
+	width: 1.24rem;
+    height: 0.88rem;
+    /* background: red; */
+    margin-right: 0.362rem;
+    float: left;
+    position: absolute;
+    z-index: 10;
 }
 
 .details_anchor_title {
@@ -317,14 +333,14 @@ i {
 .details_bottom {
 	width: 100%;
 	position: fixed;
-	top: 2.85rem;
+	top: 1.2rem;
 }
 
 .details_size {
 	position: absolute;
     bottom: -0.5rem;
     min-width: 7.6rem;
-    font-size: 0.64rem;
+    font-size: 0.24rem;
     color: #fff;
     text-indent: 0.4rem;
     right: 0.4rem;
@@ -334,7 +350,7 @@ i {
 }
 
 .details_footer_width ul li {
-	margin-left: 1.9rem;
+	margin-left: 0.95rem;
 }
 
 /*排行版无排名时图片*/
