--- a/wechat/src/main/webapp/xcview/css/details_style.css
+++ b/wechat/src/main/webapp/xcview/css/details_style.css
@@ -126,22 +126,21 @@ div.pinch-zoom,
 	/*top: 10.8rem;*/
 }
 .details_size{
-	/*right: auto;
-	left: 0;*/
-    /*border-radius: 0px 6px 6px 0px;*/
-    margin-left: 0;
+	margin-left: 0;
     background: url(/xcview/images/size_bg.png);
     background-size: 100% 100%;
-    min-width: 5.5rem;
-    padding: 0.2rem 0;
+    min-width: 2.25rem;
+    padding: 0 !important;
+    height: 0.6rem;
+    line-height: 0.6rem;
 }
 .details_size .img0{
-	width: 0.74rem;
+	width: 0.39rem;
 	margin-top: 0.2rem;
 }
 .details_size .img1{
-	width: 0.58rem;
-	margin-top: 0.1rem;
+	width: 0.34rem;
+	margin-top: 0.15rem;
 }
 .video_img{
 	height: 3rem;
@@ -195,12 +194,12 @@ div.pinch-zoom,
 	z-index: 99999999999999;
 }
 .fx_bg{
-	width: 0.65rem;
+	/* width: 0.65rem;
 	height: 0.65rem;
 	background: url(/xcview/images/fx.png)no-repeat;
 	background-size: 100% 100%;
 	float: right;
-	margin-right: 0.3rem;
+	margin-right: 0.3rem; */
 }
 .history_img_right{
 	margin-top: 0.55rem;
@@ -330,17 +329,24 @@ div.pinch-zoom,
 
 
 .history_span{
-	width: 74%; 
-	color: #666; 
-	font-size: 0.851rem;
-	position: absolute;
-	left: 2.1rem;
+	width: 100%;
+    height: 0.88rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 0.36rem;
+    text-align: center;
+    color: #333;
+    line-height: 0.88rem;
 }
 #share{
-	width: 1.8rem; 
-	color: #00bc12;
-	font-size: 0.8rem;
-	margin-right: 0.2rem;
+	width: 0.42rem;
+    height: 0.38rem;
+    position: absolute;
+    z-index: 10;
+    top: 0.25rem;
+    right: 0.26rem;
+    margin-top: 0;
 }
 
 .details_cen1{
@@ -352,11 +358,11 @@ div.pinch-zoom,
 }
 #video{
 	width: 100%;
-    height: 7.6rem;
-    margin-top: 0.5rem;
+    height: 4.24rem;
+    margin-top: 0.88rem;
     background: #000;
     opacity: 1;
-    margin-top: 1.9rem;
+    /*background: red !important;*/
 }
 .give_a01{
 	margin-top: -1.47rem;
@@ -562,30 +568,30 @@ div.pinch-zoom,
 /*加关注开始  聊天*/
 .attention{
 	width: 100%;
-	height: 2.553rem;
+	height: 1.2rem;
 	background: #fff;
 	position: fixed;
-	top: 11.1rem;
+	top: 6rem;
 	left: 0;
 	z-index: 999;
 }
 .attention .main_img{
-	width: 1.702rem;
-	height: 1.702rem;
-	border-radius: 50px;
-	float: left;
-	margin-top: 0.425rem;
-	margin-left: 0.553rem;
-	margin-right: 0.51rem;
+	width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 100px;
+    float: left;
+    margin-top: 0.2rem;
+    margin-left: 0.26rem;
+    margin-right: 0.24rem;
 }
 
 .attention .main_img img{
 	width: 100%;
 	height: 100%;
-	border-radius: 50px;
+	border-radius: 100px;
 }
 .attention .main_title{
-	width: 8rem;
+	width: 3.8rem;
 	float: left;
 	overflow: hidden;
 	white-space: nowrap;
@@ -593,35 +599,36 @@ div.pinch-zoom,
 }
 .attention .main_title .p0{
 	width: 100%;
-	font-size: 0.595rem;
-	color: #333333;
-	margin-bottom: 0.2rem;
-    margin-top: 0.4rem;
+    font-size: 0.28rem;
+    color: #333333;
+    margin-bottom: 0.16rem;
+    margin-top: 0.26rem;
     overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .attention .main_title .p1 span{
-	font-size: 0.51rem;
+	font-size: 0.24rem;
 	color: #666666;
 }
 .attention .main_title .p1 .span0{
-	margin-right: 1.042rem;
+	margin-right: 0.29rem;
 }
 .attention .main_title .p1{
 	width: 100%;
-	height: 0.9rem;
-    line-height: 0.5rem;
+    height: 0.9rem;
+    line-height: 0.1rem;
+    margin-top: -0.2rem;
 }
 .add_follow{
-	width: 3.404rem;
-	height: 1.191rem;
-	line-height: 1.191rem;
-	text-align: center;
-	/*border: 1px solid #00BC12;*/
-	float: left;
-	margin-top: 0.68rem;
-	border-radius: 100px;
+	width: 1.6rem;
+    height: 0.56rem;
+    line-height: 0.56rem;
+    text-align: center;
+    /* border: 1px solid #00BC12; */
+    float: left;
+    margin-top: 0.32rem;
+    border-radius: 100px;
 	
 }
 .add_follow00{
@@ -635,26 +642,26 @@ div.pinch-zoom,
 }
 
 .add_follow img{
-	width: 0.6rem;
-	/*width: 0.532rem;*/
-    /*height: 0.511rem;*/
-	float: left;
-	margin-top: 0.3rem;
-    margin-left: 0.4rem;
+	width: 0.24rem;
+    /* width: 0.532rem; */
+    /* height: 0.511rem; */
+    float: left;
+    margin-top: 0.16rem;
+    margin-left: 0.27rem;
     
 }
 .add_follow p{
-	font-size: 0.51rem;
-	color: #fff;
+	font-size: 0.24rem;
+    color: #fff;
+    display: block;
 }
 .attention .close{
-	/*width: ;*/
-	height: 2.553rem;
-	line-height: 2.553rem;
-	float: right;
-	margin-right: 0.553rem;
-	font-size: 1rem;
-	color: #999;
+	height: 1.2rem;
+    line-height: 1.2rem;
+    float: right;
+    margin-right: 0.26rem;
+    font-size: 0.5rem;
+    color: #999;
 }
 
 
@@ -689,20 +696,24 @@ div.pinch-zoom,
 	margin-bottom: 0;
 }
 .grabble_img{
-	width: 0.5rem;
-    height: 0.9rem;
-    background: url(../images/backicon.png) no-repeat;
-    background-size: 100% 100%;
-    margin-left: 0.56rem;
-    margin-top: 0.52rem;
+	width: 0.24rem;
+    height: 0.42rem;
+    position: absolute;
+    left: 0.26rem;
+    top: 0.23rem;
+}
+.grabble_img img{
+	width: 100%;
+	height: 100%;
+	display: block;
 }
 .fx_bg{
-	width: 0.894rem;
-    height: 0.915rem;
-    background: url(/xcview/images/share_img.png)no-repeat;
-    background-size: 100% 100%;
-    float: right;
-    margin-right: 0.3rem;
+	width: 0.42rem;
+    height: 0.43rem;
+}
+.fx_bg img{
+	width: 0.42rem;
+    height: 0.43rem;
 }
 
 /*分享开始*/
@@ -832,18 +843,18 @@ div.pinch-zoom,
 	position: absolute;
     text-align: center;
     width: 100%;
-     height: 7.6rem;
+    height: 4.24rem;
     top: 0;
-    margin-top: 1.9rem;
+    margin-top: 0.88rem;
     z-index: 1;
     background: rgba(0,0,0,0.80);
     /*display: none;*/
 }
 .video_end_top0 p{
 	color: #fff;
-	font-size: 0.68rem;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+    font-size: 0.32rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0.4rem;
 }
 .video_end_top0 .div{
 	background: #00BC12;
@@ -898,18 +909,18 @@ div.pinch-zoom,
 	position: absolute;
     text-align: center;
     width: 100%;
-     height: 7.6rem;
+    height: 4.24rem;
     top: 0;
-    margin-top: 1.9rem;
+    margin-top: 0.88rem;
     z-index: 1;
     background: rgba(0,0,0,0.80);
     /*display: none;*/
 }
 .video_end_top2 p{
 	color: #fff;
-	font-size: 0.68rem;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+    font-size: 0.32rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0.4rem;
 }
 .video_end_top2 .div{
 	background: #00BC12;
@@ -928,28 +939,28 @@ div.pinch-zoom,
 	position: absolute;
     text-align: center;
     width: 100%;
-     height: 7.6rem;
+    height: 4.24rem;
     top: 0;
-    margin-top: 1.9rem;
+    margin-top: 0.88rem;
     z-index: 1;
     background: rgba(0,0,0,0.80);
     display: none;
 }
 .video_end_top p{
 	color: #fff;
-	font-size: 0.68rem;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+    font-size: 0.32rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0.4rem;
 }
 .video_end_top .div{
 	background: #00BC12;
-	border-radius: 8px;
-	width: 3.063rem;
-	height: 1.191rem;
-	line-height: 1.191rem;
-	margin: 0 auto;
-	font-size: 0.595rem;
-	color: #fff;
+    border-radius: 8px;
+    width: 1.44rem;
+    height: 0.56rem;
+    line-height: 0.56rem;
+    margin: 0 auto;
+    font-size: 0.28rem;
+    color: #fff;
 }
 /*直播已结束提示*/
 
@@ -958,31 +969,31 @@ div.pinch-zoom,
 	position: absolute;
     text-align: center;
     width: 100%;
-     height: 7.6rem;
+    height: 4.24rem;
     top: 0;
-    margin-top: 1.9rem;
+    margin-top: 0.88rem;
     z-index: 1;
     background: rgba(0,0,0,0.80);
     /*display: none;*/
 }
 .video_end_top1 p{
-	color: #fff;
-	font-size: 0.68rem;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+	    color: #fff;
+    font-size: 0.32rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0.4rem;
 }
 .video_end_top1 .div{
 	background: none;
-	border-radius: 8px;
-	width: 3.489rem;
-	height: 2.191rem;
-	line-height: 1.191rem;
-	margin: 0 auto;
-	font-size: 0.595rem;
-	color: #fff;
+    border-radius: 8px;
+    width: 0.8rem;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    margin: 0 auto;
+    font-size: 0.595rem;
+    color: #fff;
 }
 .video_end_top1 .div img{
-	width: 1.5rem;
+	width: 0.8rem;
 }
 /*直播结束查看回放*/
 
