--- a/wechat/src/main/webapp/xcview/css/live_album.css
+++ b/wechat/src/main/webapp/xcview/css/live_album.css
@@ -495,13 +495,14 @@ textarea::-webkit-input-placeholder {
 }
 .uesr_lable ul li{
 	padding: 0.08rem 0.2rem;
-	background: #00BC12;
-	border-radius: 8px;
-	color: white;
-	margin-right: 0.2rem;
-	font-size: 0.24rem;
-	float: left;
-	margin-top: 0.1rem;
+    background: #f0f0f0;
+    border-radius: 100px;
+    color: white;
+    margin-right: 0.2rem;
+    font-size: 0.28rem;
+    float: left;
+    margin-top: 0.1rem;
+    color: #666;
 }
 /*被恢复的内容-灰色部分*/
 .uesr_returned{
@@ -671,7 +672,7 @@ textarea::-webkit-input-placeholder {
 }
 .wrapAll_comment{
 	width: 7.5rem;
-    position: absolute;
+    position: fixed;
 	display: none;
 	background:white;
 	box-sizing: border-box;
