--- a/online-web/src/main/webapp/web/css/index2.css
+++ b/online-web/src/main/webapp/web/css/index2.css
@@ -200,8 +200,8 @@ ul {
 	height: 20px;
 	position: absolute;
 	bottom: 20px;
-	/*  left:50%;
-    margin-left:-150px;*/
+	  left:50%;
+transform:translateX(-50%);
 }
 
 .slider-container .selector span {
