--- a/wechat/src/main/webapp/xcview/css/details_style.css
+++ b/wechat/src/main/webapp/xcview/css/details_style.css
@@ -5,16 +5,17 @@
 	background: #fff;
 }
 .div_img{
-	width: 1.8rem !important;
+    width: 0.6rem !important;
     position: absolute;
-    top: 0.4rem;
-    left: 0;
+    top: 0.2rem;
+    left: 0.26rem;
     z-index: 1;
-    background: #F0F0F0;
+    /*background: #e35b5b;*/
     border-radius: 20px 0px 0px 20px;
+    height: 0.6rem;
 }
 .img_left{
-	width: 0.8rem !important;
+	width: 0.3rem !important;
    /* position: absolute;
     top: 0.6rem;
     left: 0.6rem;*/
@@ -30,12 +31,12 @@
 	margin-top: 0;
 	border-radius: 50px;*/
 	/*width: 11.8rem;*/
-	width: 13.5rem;
-    border: none;
-    margin-top: 0;
-    border-radius: 50px;
-    background: #F0F0F0;
-    text-indent: 1.8rem;
+	/* width: 13.5rem;
+	    border: none;
+	    margin-top: 0;
+	    border-radius: 50px;
+	    background: #F0F0F0; */
+    text-indent: 0.7rem;
 }
 
 .coze_bottom ::-webkit-input-placeholder { /* WebKit browsers */
@@ -61,30 +62,30 @@
 	height: 1.8rem;
 }
 .div_input{
-	/*width: 13rem;*/
-	width: 13.4rem;
-    height: 1.45rem;
-    line-height: 1.45rem;
-    /*border: 1px solid #ccc;*/
+	 /*width: 13rem;*/
+    width: 6rem;
+    height: 0.6rem;
+    line-height: 0.6rem;
+    /* border: 1px solid #ccc; */
     outline: none;
     font-size: 0.7rem;
     text-indent: 0.3rem;
     color: #999;
     border-radius: 50px;
-    margin-top: 0.35rem;
+    margin-top: 0.2rem;
     background: #fff;
+    margin-left: 0.26rem;
 }
 .leaderboard_center img {
-    width: 1.65rem;
-    height: 1.65rem;
+    width: 0.8rem;
+    height: 0.8rem;
     float: left;
     margin-right: 0.4rem;
     border: 3px solid #ededed;
-    border-radius: 60px;
-    margin-top: 0.3rem;
+    border-radius: 100px;
 }
 .leaderboard_center{
-	margin-top: 0.2rem;
+	margin-top: 0.24rem;
 }
 .details_portrait{
 	width: 1.65rem;
@@ -178,7 +179,7 @@ div.pinch-zoom,
 }
 #xmbShowSpan{
 	display: inline-block;
-	margin-left: 0.3rem;
+	margin-left: 0.08rem;
 	color: #666;
 	/*margin-right: 0.3rem;*/
 }
@@ -228,24 +229,23 @@ div.pinch-zoom,
     color: #BBBBBB;
 }
 #sendChat{
-	font-size: 0.55rem;
+    font-size: 0.4rem;
     position: absolute;
-    top: 0rem;
-    
+    top: 0;
     display: none;
-    margin-top: 0.35rem;
-    height: 1.45rem;
-    line-height: 1.45rem;
+    /* margin-top: 0.35rem; */
+    height: 0.95rem;
+    line-height: 0.95rem;
     color: #00BC12;
     background: none;
     font-weight: bold;
 }
 .send_img{
-	right: -1.8rem !important;
+	right: -1.55rem !important;
 }
 .facebox-mobile{
-	top: 1.2rem !important;
-    left: -12.9rem;
+	top: 0.95rem !important;
+    left: -5.4rem;
 }
 .facebox-mobiles{
 	left: -13.6rem;
@@ -264,17 +264,17 @@ div.pinch-zoom,
 	border-top: 1px solid #e0e0e0;
 }
 .balance_send{
-	width: 2.75rem;
+	    width: 2.75rem;
     height: 1.1rem;
     line-height: 1.1rem;
     margin-top: 0rem;
-    width: 6.325rem;
-    height: 2.085rem;
-    line-height: 2.085rem;
+    width: 2.53rem;
+    height: 0.98rem;
+    line-height: 0.98rem;
     margin-right: 0;
     border-radius: 0;
-    font-size: 0.75rem;
-    margin-top: -0.025rem;
+    font-size: 0.3rem;
+    /* margin-top: -0.025rem; */
 }
 .fd_img_bg{
     width: 4rem;
@@ -345,7 +345,7 @@ div.pinch-zoom,
     position: absolute;
     z-index: 10;
     top: 0.25rem;
-    right: 0.26rem;
+    right: 0rem;
     margin-top: 0;
 }
 
@@ -385,21 +385,20 @@ div.pinch-zoom,
 	right: -3.5rem;
 }
 .give_a1 .give_a1_img{
-	margin-left: -2.9rem;
-    width: 1.4rem;
-    margin-top: 0.4rem;
+	margin-left: -4.26rem;
+    width: 0.8rem;
+    margin-top: 0.1rem;
     display: block !important;
 }
 .give_a01{
-	margin-left: -0.2rem;
-    display: inline-block;
+    margin-left: -0.2rem;
     position: absolute;
-    right: -0.0653rem;
-    top: 1.98rem;
+    right: 1.3rem;
+    top: 1.55rem;
     display: none;
 }
 .coze_bottom_input{
-	width: 13.5rem;
+	width: 7.5rem;
     /*background: #00BCD4;*/
 }
 #face{
@@ -410,27 +409,27 @@ div.pinch-zoom,
 /*处理礼物模块*/
 .send_gifts .balance{
 	padding: 0;
-    height: 2.085rem;
+    height: 0.98rem;
     border-top: 1px solid #f0f0f0;
 }
 .send_gifts{
-	height: 11.234rem;
+	height: 5.8rem;
 	/*height: 5rem;*/
 	bottom: 0;
 }
 .send_gifts ul{
 	/*background: #fff;*/
-    height: 8.298rem;
+    height: 3.8rem;
     display: inline-block;
     padding: 0;
-    padding-top: 0.451rem;
+    padding-top: 0.1rem;
      /*background: url(/xcview/images/size_bg.png);*/
     background-size: 100% 100%;
 }
 .send_gifts ul li{
 	border-radius: 0px;
-	width: 3.404rem;
-    height: 3.404rem;
+	width: 1.86rem;
+    height: 1.86rem;
     padding: 0;
     position: relative;
    	border: 1px solid #fefefe;
@@ -440,8 +439,8 @@ div.pinch-zoom,
 .send_gifts ul li a{
 	margin: 0 auto;
     display: table;
-    width: 3.404rem;
-    height: 3.404rem;
+    width: 1.86rem;
+    height: 1.86rem;
     text-align: -webkit-center;
 }
 .gift_p{
@@ -449,32 +448,32 @@ div.pinch-zoom,
     position: absolute;
     bottom: 0rem;
     margin-left: 0rem; 
-    padding-bottom: 0.3rem;
+    padding-bottom: 0.1rem;
 }
 .gift_ul_li_li{
 	border: 1px solid #96e39d !important;
 }
 .balance_size{
-	float: left;
-	font-size: 0.6rem;
+	    float: left;
+    font-size: 0.24rem;
     color: #333;
     margin-top: 0;
-    height: 2.085rem;
-    line-height: 2.085rem;
+    height: 0.98rem;
+    line-height: 0.98rem;
 }
 .balance_size span{
-	height: 2.45rem;
-	line-height: 2.45rem;
+	    height: 0.98rem;
+    line-height: 0.98rem;
 }
 .send_gifts .gifts_div{
-	width: 2.5rem;
+	width: 1.5rem;
     /*height: 1.7rem;*/
 }
 
 .coze_cen_ri .span_name{
 	float: left;
 	color: #666;
-	font-size: 0.596rem;
+	font-size: 0.28rem;
 	margin-left: 0.2rem;
 }
 .coze_cen_bg_ri{
@@ -484,7 +483,7 @@ div.pinch-zoom,
     /* border: 0.01rem solid #ccc; */
     float: left;
     padding: 0;
-    font-size: 0.596rem;
+    font-size: 0.28rem;
     color: #333;
     border-radius: 0;
     /* font-family: "微软雅黑"; */
@@ -527,10 +526,7 @@ div.pinch-zoom,
 
 
 .anchor_center01{
-	padding-top: 0.638rem;
-	position1: fixed;
-    top1: 10.4rem;
-
+	padding-top: 0.2rem;
 }
 .anchor_center{
 	overflow-y1: scroll;
@@ -539,12 +535,12 @@ div.pinch-zoom,
 
 
 .leaderboard_center img{
-	margin-top: 0.6rem;
+	margin-top: 0rem;
 }
 
 
 .leaderboard_center_size{
-	margin-top: 0.656rem;
+	margin-top: 0rem;
 }
 
 
@@ -788,26 +784,26 @@ div.pinch-zoom,
 
 /*添加礼物关闭按钮开始*/
 .send_gifts_ul .div{
-	font-size: 0.6rem;
-	color: #333;
-	width: 100%;
-	height: 1.4rem;
-	line-height: 1.4rem;
-	border-bottom: 1px solid #d2d2d2;
+	    font-size: 0.3rem;
+    color: #333;
+    width: 100%;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    border-bottom: 1px solid #d2d2d2;
 }
 .send_gifts_ul .div .span0{
 	margin-left: 0.4rem;
 }
 .send_gifts_ul .div .span1{
-	float: right;
-    font-size: 0.8rem;
-    width: 1.4rem;
+	    float: right;
+    font-size: 0.5rem;
+    width: 0.8rem;
     height: 100%;
     text-align: center;
     color: #999;
 }
 .send_gifts ul li a p{
-	font-size: 0.5rem !important;
+	font-size: 0.26rem !important;
 }
 /*添加礼物关闭按钮结束*/
 
@@ -827,14 +823,15 @@ div.pinch-zoom,
 	right: -3.5rem !important;
 }
 .div_img .img_left{
-	margin-left: 0.6rem;
+	margin-left: 0.2rem;
+    margin-top: 0.15rem;
 }
 
 
 /*处理排行榜下划线位置--给的left值*/
 .leaderboard_list{
 	width: 97%;
-	margin-left: 0.5rem;
+	/*margin-left: 0.26rem;*/
 }
 
 
@@ -1001,3 +998,8 @@ div.pinch-zoom,
 	border-top: 1px solid #f0f0f0;
 }
 
+.facebox-mobile li{
+	padding: 0 !important;
+	margin-top: 0.25rem;
+    width: 1rem !important;
+}
