--- a/wechat/src/main/webapp/xcview/css/details.css
+++ b/wechat/src/main/webapp/xcview/css/details.css
@@ -50,7 +50,7 @@ header{
 }
 
 .facebox.facebox-mobile {
-	margin-top: 0.2rem;
+	margin-top: 0rem;
 }
 
 #mCSB_1_container {
@@ -69,8 +69,8 @@ header{
 }
 
 .coze_cen_ri {
-	margin-top: 0.4rem;
-	margin-bottom: 0.4rem;
+	margin-top: 0.2rem;
+	/*margin-bottom: 0.4rem;*/
 }
 
 .facebox-mobile {
@@ -179,7 +179,7 @@ header{
 }
 
 .coze_bottom img {
-	margin-top: 0.25rem;
+	/*margin-top: 0.25rem;*/
 }
 
 .facebox-mobile {
@@ -209,8 +209,8 @@ header{
 }
 
 .face_img01 {
-	width: 1.2rem;
-	height: 1.2rem;
+	width: 0.8rem;
+	height: 0.8rem;
 }
 
 .give_a1_span02 img {
@@ -310,7 +310,7 @@ i {
 
 .coze_bottom {
 	padding: 0 !important;
-	height: 2.125rem;
+	height: 0.98rem;
 }
 
 .poson {
@@ -355,11 +355,11 @@ i {
 
 /*排行版无排名时图片*/
 .no_git_pic{
-	    width: 3.22rem;
-    height: 4.85rem;
+	    width: 1.5rem;
+    height: 2.59rem;
     background: url(../images/no_git.png) no-repeat center;
     background-size: 100% 100%;
-    margin: 3.32rem auto 0;
+    margin: 2.5rem auto 0;
 }
 
 
