--- a/online-web/src/main/webapp/web/css/school/school-live.css
+++ b/online-web/src/main/webapp/web/css/school/school-live.css
@@ -253,6 +253,7 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 .wrap-docter ul li img{
 	width: 60px;
 	height: 60px;
+	border-radius: 50%;
 }
 .wrap-docter ul li p{
 overflow: hidden;
