筛选列表--处理ios滑动卡顿

--- a/wechat/src/main/webapp/xcview/css/curriculum_table.css
+++ b/wechat/src/main/webapp/xcview/css/curriculum_table.css
@@ -74,6 +74,7 @@ body{
     display:table;
     padding-top: 1.4rem !important;
     box-sizing: border-box;
+    -webkit-overflow-scrolling:touch;
 }
 
 .li_list0{
