直播间代码还原。。够买成功后免费

--- a/wechat/src/main/webapp/xcview/css/buy_prosperity.css
+++ b/wechat/src/main/webapp/xcview/css/buy_prosperity.css
@@ -141,7 +141,7 @@ span,p{
 	font-size: 0.28rem;
 	color: #333333;
 }
-.purchase_details_money span{
+.purchase_details_money .span{
 
 	color: #F97B49;
 	font-size: 0.36rem;
