--- a/wechat/src/main/webapp/xcview/css/details.css
+++ b/wechat/src/main/webapp/xcview/css/details.css
@@ -1,17 +1,5 @@
 @CHARSET "UTF-8";
 
-
-header{
-	width: 100%;
-    height: 0.88rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    font-size: 0.36rem;
-    text-align: center;
-    color: #333;
-    border-bottom: 1px solid #d8dde6;
-}
 .guanzhu1 {
 	display: none;
 }
@@ -50,7 +38,7 @@ header{
 }
 
 .facebox.facebox-mobile {
-	margin-top: 0rem;
+	margin-top: 0.2rem;
 }
 
 #mCSB_1_container {
@@ -69,8 +57,8 @@ header{
 }
 
 .coze_cen_ri {
-	margin-top: 0.2rem;
-	/*margin-bottom: 0.4rem;*/
+	margin-top: 0.4rem;
+	margin-bottom: 0.4rem;
 }
 
 .facebox-mobile {
@@ -137,13 +125,9 @@ header{
 }
 
 .grabble_left {
-	width: 1.24rem;
-    height: 0.88rem;
-    /* background: red; */
-    margin-right: 0.362rem;
-    float: left;
-    position: absolute;
-    z-index: 10;
+	width: 1.8rem;
+	height: 1.8rem;
+	float: left;
 }
 
 .details_anchor_title {
@@ -179,7 +163,7 @@ header{
 }
 
 .coze_bottom img {
-	/*margin-top: 0.25rem;*/
+	margin-top: 0.25rem;
 }
 
 .facebox-mobile {
@@ -209,8 +193,8 @@ header{
 }
 
 .face_img01 {
-	width: 0.8rem;
-	height: 0.8rem;
+	width: 1.2rem;
+	height: 1.2rem;
 }
 
 .give_a1_span02 img {
@@ -310,7 +294,7 @@ i {
 
 .coze_bottom {
 	padding: 0 !important;
-	height: 0.98rem;
+	height: 2.125rem;
 }
 
 .poson {
@@ -333,14 +317,14 @@ i {
 .details_bottom {
 	width: 100%;
 	position: fixed;
-	top: 1.2rem;
+	top: 2.85rem;
 }
 
 .details_size {
 	position: absolute;
     bottom: -0.5rem;
     min-width: 7.6rem;
-    font-size: 0.24rem;
+    font-size: 0.64rem;
     color: #fff;
     text-indent: 0.4rem;
     right: 0.4rem;
@@ -350,16 +334,16 @@ i {
 }
 
 .details_footer_width ul li {
-	margin-left: 0.95rem;
+	margin-left: 1.9rem;
 }
 
 /*排行版无排名时图片*/
 .no_git_pic{
-	    width: 1.5rem;
-    height: 2.59rem;
+	    width: 3.22rem;
+    height: 4.85rem;
     background: url(../images/no_git.png) no-repeat center;
     background-size: 100% 100%;
-    margin: 2.5rem auto 0;
+    margin: 3.32rem auto 0;
 }
 
 
