--- a/online-web/src/main/webapp/web/css/school/curriculum-list.css
+++ b/online-web/src/main/webapp/web/css/school/curriculum-list.css
@@ -259,9 +259,7 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     overflow: hidden;
 }
 .main .wrap-video > div > a .detail .title {
-    max-width: 260px;
-    /* height: 30px; */
-    display: inline-block;
+    max-width: 240px;
     overflow: hidden;
     font-size: 14px;
     color: #333;
@@ -270,26 +268,25 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 }
 .main .wrap-video > div > a .detail .timeAndTeac {
     display: block;
-    margin: 2px 0;
+    margin: 5px 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .main .wrap-video > div > a .detail .timeAndTeac span {
-    font-size: 12px;
+    font-size: 13px;
     color: #999;
 }
-.main .wrap-video > div > a .detail .timeAndTeac span {
-    font-size: 12px;
-    color: #999;
-}
+
 .main .wrap-video > div > a .detail .info > span:nth-child(1) {
     float: left;
+}
+.main .wrap-video > div > a .detail .info{
+	font-size: 13px;
 }
 .main .wrap-video > div > a .detail .info .price {
     display: inline-block;
     margin: 0 3px 0 0;
-    font-size: 16px;
     color: #F97B49;
 }
 .main .wrap-video > div > a .detail span {
@@ -300,6 +297,7 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 }
 .main .stuCount .studentCou{
 	float: right;
-	margin-top: 1px;
+	margin-top: 2px;
+	margin-left: 5px;
 }
 /*视频样式结束*/
