--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -546,9 +546,7 @@ word-break:break-all;
     overflow: hidden;
 }
 .wrap-recommend > div > a .detail .title {
-    max-width: 260px;
-    /* height: 30px; */
-    display: inline-block;
+    max-width: 240px;
     overflow: hidden;
     font-size: 14px;
     color: #333;
@@ -557,26 +555,25 @@ word-break:break-all;
 }
 .wrap-recommend > div > a .detail .timeAndTeac {
     display: block;
-    margin: 2px 0;
+    margin: 5px 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .wrap-recommend > div > a .detail .timeAndTeac span {
-    font-size: 12px;
+    font-size: 13px;
     color: #999;
 }
-.wrap-recommend > div > a .detail .timeAndTeac span {
-    font-size: 12px;
-    color: #999;
-}
+
 .wrap-recommend > div > a .detail .info > span:nth-child(1) {
     float: left;
 }
+.wrap-recommend > div > a .detail .info {
+	font-size: 13px;
+	}
 .wrap-recommend > div > a .detail .info .price {
     display: inline-block;
     margin: 0 3px 0 0;
-    font-size: 16px;
     color: #F97B49;
 }
 .wrap-recommend > div > a .detail span {
@@ -587,7 +584,8 @@ word-break:break-all;
 }
 .wrap-recommend .stuCount .studentCou{
 	float: right;
-	margin-top: 1px;
+	margin-top: 2px;
+	margin-left: 5px;
 }
 /*视频样式结束*/
 
