--- a/online-web/src/main/webapp/web/css/school/school-live.css
+++ b/online-web/src/main/webapp/web/css/school/school-live.css
@@ -181,9 +181,9 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     overflow: hidden;
 }
 .main .content-class > div > a .detail .title {
-    max-width: 260px;
+    max-width: 240px;
     /* height: 30px; */
-    display: inline-block;
+
     overflow: hidden;
     font-size: 14px;
     color: #333;
@@ -193,26 +193,26 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 }
 .main .content-class > div > a .detail .timeAndTeac {
     display: block;
-    margin: 2px 0;
+    margin: 5px 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .main .content-class > div > a .detail .timeAndTeac span {
-    font-size: 12px;
+    font-size: 13px;
     color: #999;
 }
-.main .content-class > div > a .detail .timeAndTeac span {
-    font-size: 12px;
-    color: #999;
-}
+
 .main .content-class > div > a .detail .info > span:nth-child(1) {
     float: left;
 }
+.main .content-class > div > a .detail .info{
+	font-size: 13px;
+	}
 .main .content-class > div > a .detail .info .price {
     display: inline-block;
     margin: 0 3px 0 0;
-    font-size: 16px;
+
     color: #F97B49;
 }
 .main .content-class > div > a .detail span {
@@ -221,6 +221,11 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 .main .content-class > div > a .detail .info > span:nth-child(2) {
     float: right;
 }
+.main  .content-class .stuCount .studentCou{
+	float: right;
+	margin-top: 2px;
+	margin-left: 5px;
+	}
 /*视频样式结束*/
 /*右侧,成为主播*/
 .wrap-docter{
