--- a/online-web/src/main/webapp/web/css/school/school-video.css
+++ b/online-web/src/main/webapp/web/css/school/school-video.css
@@ -182,9 +182,8 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
     overflow: hidden;
 }
 .main .content-class > div > a .detail .title {
-    max-width: 260px;
+    max-width: 240px;
     /* height: 30px; */
-    display: inline-block;
     overflow: hidden;
     font-size: 14px;
     color: #333;
@@ -194,26 +193,25 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 }
 .main .content-class > div > a .detail .timeAndTeac {
     display: block;
-    margin: 2px 0;
+    margin: 5px 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .main .content-class > div > a .detail .timeAndTeac span {
-    font-size: 12px;
+    font-size: 13px;
     color: #999;
 }
-.main .content-class > div > a .detail .timeAndTeac span {
-    font-size: 12px;
-    color: #999;
-}
+
 .main .content-class > div > a .detail .info > span:nth-child(1) {
     float: left;
+}
+.main .content-class > div > a .detail .info{
+	font-size: 13px;
 }
 .main .content-class > div > a .detail .info .price {
     display: inline-block;
     margin: 0 3px 0 0;
-    font-size: 16px;
     color: #F97B49;
 }
 .main .content-class > div > a .detail span {
@@ -224,7 +222,8 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 }
 .main .content-class .stuCount .studentCou{
 	float: right;
-	margin-top: 1px;
+	margin-top: 2px;
+	margin-left: 5px;
 }
 /*右侧,成为主播*/
 .wrap-docter{
