--- a/online-web/src/main/webapp/web/css/index2.css
+++ b/online-web/src/main/webapp/web/css/index2.css
@@ -56,7 +56,12 @@ em {
 	font-style: normal;
 	display: block;
 }
-
+.z{
+	float: left;	
+}
+.y{
+	float: right;
+}
 .clearfix:after {
 	content: '';
 	height: 0;
@@ -544,9 +549,7 @@ a {
 }
 
 .course>a .detail .title {
-	max-width: 260px;
-	/* height: 30px; */
-	display: inline-block;
+	max-width: 240px;
 	overflow: hidden;
 	font-size: 14px;
 	color: #333;
@@ -556,30 +559,26 @@ a {
 
 .course>a .detail .timeAndTeac {
 	display: block;
-	margin: 2px 0;
+	margin: 5px 0;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
 
 .course>a .detail .timeAndTeac span {
-	font-size: 12px;
+	font-size: 13px;
 	color: #999;
 }
 
-.course>a .detail .timeAndTeac span {
-	font-size: 12px;
-	color: #999;
-}
 
 .course>a .detail .info>span:nth-child(1) {
 	float: left;
 }
-
+.course>a .detail .info{
+	font-size: 13px;
+}
 .course>a .detail .info .price {
 	display: inline-block;
-	margin: 0 3px 0 0;
-	font-size: 16px;
 	color: #F97B49;
 }
 
@@ -591,9 +590,10 @@ a {
 	float: right;
 }
 
-.main .stuCount .studentCou {
+.course .stuCount .studentCou {
 	float: right;
-	margin-top: 1px;
+	margin-top:2px;
+	margin-left: 5px;
 }
 
 
