--- a/online-web/src/main/webapp/web/css/footer.css
+++ b/online-web/src/main/webapp/web/css/footer.css
@@ -90,6 +90,7 @@ footer .content .trademark {
   margin-top: 10px;
   text-align: center;
   color: white;
+  position: relative;
 }
 footer .content .trademark img {
   margin-top: -11px;
