--- a/wechat/src/main/webapp/xcview/css/recharges.css
+++ b/wechat/src/main/webapp/xcview/css/recharges.css
@@ -20,15 +20,15 @@ body{
 
 /*头部开始*/
 header {
-    width: 14.545rem;
+    width: 100%;
     height: 1.872rem;
     line-height: 1.872rem;
     background: #fff;
     position: fixed;
     top: 0;
-    left: 50%;
+    left: 0;
     z-index: 9;
-    margin-left: -7.275rem;
+    /* margin-left: -7.275rem; */
 }
 .header {
     width: 14.851rem;
