--- a/online-web/src/main/webapp/web/css/liveVideo.css
+++ b/online-web/src/main/webapp/web/css/liveVideo.css
@@ -688,7 +688,7 @@ overflow-y: auto;
     right: 0;
     top: 64px;
     width: 310px;
-    height: 100%;
+    /*height: 100%;*/
     overflow: auto;
 }
 .album_list > ul{
