--- a/online-web/src/main/webapp/web/css/school/anchor-hospital.css
+++ b/online-web/src/main/webapp/web/css/school/anchor-hospital.css
@@ -202,7 +202,7 @@ p{margin-bottom: 0;}
     overflow: hidden;
 }
 .wrap-class > div > a .detail .title {
-    max-width: 260px;
+    max-width: 240px;
     /* height: 30px; */
     display: inline-block;
     overflow: hidden;
@@ -213,37 +213,36 @@ p{margin-bottom: 0;}
 }
 .wrap-class > div > a .detail .timeAndTeac {
     display: block;
-    margin: 2px 0;
+    margin: 5px 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .wrap-class > div > a .detail .timeAndTeac span {
-    font-size: 12px;
+    font-size: 13px;
     color: #999;
 }
-.wrap-class > div > a .detail .timeAndTeac span {
-    font-size: 12px;
-    color: #999;
-}
+
 .wrap-class > div > a .detail .info > span:nth-child(1) {
     float: left;
 }
 .wrap-class > div > a .detail .info .price {
     display: inline-block;
-    margin: 0 3px 0 0;
-    font-size: 16px;
     color: #F97B49;
 }
 .wrap-class > div > a .detail span {
     color: #999;
+}
+.wrap-class > div > a .detail .info{
+	font-size: 13px;
 }
 .wrap-class > div > a .detail .info > span:nth-child(2) {
     float: right;
 }
 .wrap-class .stuCount .studentCou{
 	float: right;
-	margin-top: 1px;
+	margin-top: 2px;
+	margin-left: 5px;
 }
 /*视频样式结束*/
 /*介绍*/
