--- a/online-web/src/main/webapp/web/css/school/anchor-hospital.css
+++ b/online-web/src/main/webapp/web/css/school/anchor-hospital.css
@@ -221,8 +221,14 @@ p{margin-bottom: 0;}
 .wrap-class > div > a .detail .timeAndTeac span {
     font-size: 13px;
     color: #999;
+    width: 115px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
-
+.wrap-class > div > a .detail .timeAndTeac span:nth-child(2){
+    text-align: right;
+}
 .wrap-class > div > a .detail .info > span:nth-child(1) {
     float: left;
 }
