--- a/online-web/src/main/webapp/web/css/school/anchor-details.css
+++ b/online-web/src/main/webapp/web/css/school/anchor-details.css
@@ -281,6 +281,12 @@ p{margin-bottom: 0;}
 	background: white;
 	padding: 30px 20px 20px;
 }
+.anchor-introduce p{
+	line-height: 1.75em;
+}
+.anchor-introduce img{
+	margin: 20px 0;
+}
 .anchor-hospital{
 	padding: 20px;
 	background: white;
