--- a/online-web/src/main/webapp/web/css/school/anchor-hospital.css
+++ b/online-web/src/main/webapp/web/css/school/anchor-hospital.css
@@ -7,6 +7,9 @@ body{
 }
 a:link{text-decoration:none; } 
 a:hover{text-decoration: none;}
+a:focus {
+outline: none;
+}
 ul{margin: 0;}
 p{margin-bottom: 0;}
 .cl{clear: both;}
