--- a/online-web/src/main/webapp/web/css/school/curriculum-list.css
+++ b/online-web/src/main/webapp/web/css/school/curriculum-list.css
@@ -11,6 +11,9 @@ a:link{text-decoration:none; }  /* 指正常的未被访问过的链接*/
 a:visited{text-decoration:none; }/*指已经访问过的链接*/
 a:hover{text-decoration:none;}/*指鼠标在链接*/}
 a:active{text-decoration:none;}/* 指正在点的链接*/ 
+a:focus {
+outline: none;
+}
 .cl{clear: both;}
 .z{float: left;}
 .y{float: right;}
