--- a/online-web/src/main/webapp/web/css/school/pay-success.css
+++ b/online-web/src/main/webapp/web/css/school/pay-success.css
@@ -7,7 +7,9 @@ body{
 }
 a:link{text-decoration:none; } 
 a:hover{text-decoration: none;}
-
+a:focus {
+outline: none;
+}
 p{margin-bottom: 0;}
 .cl{clear: both;}
 .z{float: left;}
