--- a/online-web/src/main/webapp/web/css/school/school-under.css
+++ b/online-web/src/main/webapp/web/css/school/school-under.css
@@ -8,6 +8,9 @@ a:link{text-decoration:none; }  /* 指正常的未被访问过的链接*/
 a:visited{text-decoration:none; }/*指已经访问过的链接*/
 a:hover{text-decoration:none;}/*指鼠标在链接*/}
 a:active{text-decoration:none;}/* 指正在点的链接*/ 
+a:focus {
+outline: none;
+}
 .z{float: left;}
 .y{float: right;}
 .wp{width: 1200px; margin: 0 auto;}
